--- a/catalog-item.html
+++ b/catalog-item.html
@@ -40,11 +40,13 @@
     <section class="product-photos">
       <h2 class="visually-hidden">Изображения товара</h2>
       <p class="product-photo-full">
-        <ul class="product-photo-preview">
-          <li><img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас"></li>
-          <li><img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
-          <li><img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>
-        </ul>
+        <img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
+      </p>
+      <ul class="product-photo-preview">
+        <li><img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас"></li>
+        <li><img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
+        <li><img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>
+      </ul>
     </section>
     <section class="product-info">
       <h2 class="visually-hidden">Описание товара</h2>
@@ -100,7 +102,7 @@
         </p>
         <button class="button" type="submit">Войти</button>
       </form>
-      <span class="modal-close">x</span>
+      <span class="modal-close">Закрыть</span>
     </section>
   </main>
 </body>
